[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/enemies/enemy_scrub.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 16.3137
height = 18.8627

[sub_resource type="Animation" id=2]

resource/name = "Death"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ), Rect2( 64, 0, 64, 64 ), Rect2( 128, 0, 64, 64 ), Rect2( 192, 0, 64, 64 ), Rect2( 256, 0, 64, 64 ) ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="enemy" type="KinematicBody2D" groups=[
"enemy",
"destructable_by_bullet",
]]

transform/pos = Vector2( 50, 50 )
transform/scale = Vector2( 1.5625, 1.5625 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( -4.31319e-08, -0.986742, 1.11323, -4.86608e-08, -2.48163e-07, -0.115359 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 5
collision/margin = 0.08
script/script = ExtResource( 1 )
flippedH = false
gravity_enabled = true
max_HP = 10
hp = 10
invulnerability_time = 5
uses_invulnerability_timer = true
has_invulnarable_animation = false
invulnerable_animation_player = "SecondAnimationPlayer"
movement_speed = 64
damage = 5

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
flip_h = true
region = true
region_rect = Rect2( 64, 0, 64, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Death = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Walking = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Walking"

[node name="body_shape" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -2.48163e-07, -0.115359 )
transform/rot = 90.0
transform/scale = Vector2( 0.986742, 1.11323 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="FrontGroundDetector" type="RayCast2D" parent="."]

transform/pos = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 25 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="head_area" type="Area2D" parent="."]

transform/pos = Vector2( 0, -7.97645 )
transform/scale = Vector2( 1, 0.52035 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1.83998, 0, 0, 1, -0.780631, -14.9867 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 4

[node name="head_shape" type="CollisionShape2D" parent="head_area"]

transform/pos = Vector2( -0.780631, -14.9867 )
transform/scale = Vector2( 1.83998, 1 )
shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


